[package]
name = "tower-http"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[workspace]
members = [
  "tower-add-origin",
]

[dependencies]
futures = "0.1"
http = "0.1"
tower-add-origin = { path = "tower-add-origin" }
tower-service = { git = "https://github.com/pantsbuild/tower", rev = "7b61c1fc1992c1df684fd3f179644ef0ca9bfa4c" }

