[package]
name = "tower-add-origin"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
futures = "0.1"
http = "0.1"
tower-service = { git = "https://github.com/pantsbuild/tower", rev = "7b61c1fc1992c1df684fd3f179644ef0ca9bfa4c" }

[dev-dependencies]
tower-mock = { git = "https://github.com/pantsbuild/tower", rev = "7b61c1fc1992c1df684fd3f179644ef0ca9bfa4c" }
